--- a/BackendCapstone/Views/Shared/_Layout.cshtml
+++ b/BackendCapstone/Views/Shared/_Layout.cshtml
@@ -16,12 +16,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Account4Me", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "" }, null)</li>
+                    <li><a ng-href="#!/teachers">Manage Teachers</a></li>
+                    <li><a ng-href="#!/teachers">Manage Locations</a></li>
+                    <li><a ng-href="#!/reports">Real-Time Reports</a></li>
                 </ul>
             </div>
         </div>
