teacher and student button showing on index page

--- a/BackendCapstone/app/partials/index.html
+++ b/BackendCapstone/app/partials/index.html
@@ -1,3 +1,7 @@
 ﻿<h2>
     {{message}}
 </h2>
+<div>
+    <div><button>I am a TEACHER</button></div>
+    <div><button>I am a STUDENT</button></div>
+</div>
