working on edit teacher info

--- a/BackendCapstone/app/partials/teachersList.html
+++ b/BackendCapstone/app/partials/teachersList.html
@@ -8,14 +8,15 @@
             <tr>
                 <th scope="col">Teacher First Name</th>
                 <th scope="col">Teacher Last Name</th>
-                <th scope="col">Location</th>
+                <th scope="col">Room Number</th>
             </tr>
         </thead>
         <tbody>
             <tr ng-repeat="teacher in teachers">
                 <td>{{teacher.FirstName}}</td>
                 <td>{{teacher.LastName}}</td>
-                <td>{{teacher.Location}}</td>
+                <td>{{teacher.RoomNumber}}</td>
+                <td><button class="btn btn-danger" ng-click="editTeacherInformation(teacher.TeacherId)">Edit Information</button></td>
             </tr>
         </tbody>
     </table>
