--- a/BackendCapstone/app/partials/editTeacherInfo.html
+++ b/BackendCapstone/app/partials/editTeacherInfo.html
@@ -1,10 +1,22 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div>
+    <form>
+        <div class="form-group">
+            <label for="teacherFirstName">Teacher First Name</label>
+            <input type="text" class="form-control" id="teacherFirstName" ng-model="teacher.FirstName" placeholder="First Name">
+        </div>
+        <div class="form-group">
+            <label for="teacherLastName">Teacher Last Name</label>
+            <input type="text" class="form-control" id="teacherLastName" ng-model="teacher.LastName" placeholder="Last Name">
+        </div>
+        <div class="form-group">
+            <label for="teacherRoomNumber">Teacher Room Number</label>
+            <input type="text" id="teacherRoomNumber" ng-model="teacher.RoomNumber">
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox"> Check if Homeroom Teacher
+            </label>
+        </div>
+        <button type="submit" class="btn btn-default" ng-click="Submit(teacher)">Submit</button>
+    </form>
+</div>
