locations printing to page

--- a/BackendCapstone/Views/Shared/_Layout.cshtml
+++ b/BackendCapstone/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a ng-href="#!/teachers">Manage Teachers</a></li>
-                    <li><a ng-href="#!/teachers">Manage Locations</a></li>
+                    <li><a ng-href="#!/locations">Manage Locations</a></li>
                     <li><a ng-href="#!/reports">Real-Time Reports</a></li>
                 </ul>
             </div>
