--- a/BackendCapstone/app/partials/editLocation.html
+++ b/BackendCapstone/app/partials/editLocation.html
@@ -1,10 +1,13 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+﻿<div>
+    <form>
+        <div class="form-group">
+            <label for="locationName">Location Name</label>
+            <input type="text" class="form-control" id="locationName" ng-model="" placeholder="Location Name">
+        </div>
+        <div class="form-group">
+            <label for="timeAtLocation">Time At Location</label>
+            <input type="number" class="form-control" id="timeAtLocation" ng-model="" placeholder="Alloted Time for Location">
+        </div>
+        <button type="submit" class="btn btn-default" ng-click="Submit(updatedLocation)">Submit</button>
+    </form>
+</div>
