--- a/BackendCapstone/app/partials/editTeacherInfo.html
+++ b/BackendCapstone/app/partials/editTeacherInfo.html
@@ -10,7 +10,7 @@
         </div>
         <div class="checkbox">
             <label>
-                <input type="checkbox"> Check if Homeroom Teacher
+                <input type="checkbox" ng-model="updatedTeacher.IsHomeroomTeacher"> Check if Homeroom Teacher
             </label>
         </div>
         <button type="submit" class="btn btn-default" ng-click="Submit(updatedTeacher)">Submit</button>
