setup routing for student view and teacher view

--- a/BackendCapstone/app/partials/index.html
+++ b/BackendCapstone/app/partials/index.html
@@ -2,6 +2,6 @@
     {{message}}
 </h2>
 <div>
-    <div><button>I am a TEACHER</button></div>
-    <div><button>I am a STUDENT</button></div>
+    <div><button ng-click="showTeacherView()">I am a TEACHER</button></div>
+    <div><button ng-click="showStudentView()">I am a STUDENT</button></div>
 </div>
