dropdown menu populated with teacher names

--- a/BackendCapstone/app/partials/studentView.html
+++ b/BackendCapstone/app/partials/studentView.html
@@ -1,1 +1,12 @@
-﻿
+﻿<div>
+    <div>
+        <h2>Choose your Homeroom Teacher:</h2>
+    </div>
+    <select >
+        <option value="select">Select One</option>
+        <option ng-repeat="teacher in teachers" value="{{teacher.FirstName}}{{teacher.LastName}}">{{teacher.TeacherName}}: {{teacher.Location}}</option>
+    </select>
+
+
+
+</div>
