student buttons populating to screen

--- a/BackendCapstone/app/partials/studentView.html
+++ b/BackendCapstone/app/partials/studentView.html
@@ -3,12 +3,13 @@
         <h2>Choose your Homeroom Teacher:</h2>
     </div>
     <select ng-change="selectTeacher()" ng-model="homeroomTeacher.TeacherId">
-        <option ng-repeat="homeroomTeacher in homeroomTeachers" value="{{homeroomTeacher.TeacherId}}" ng-if="homeroomTeacher.IsHomeroomTeacher" >{{homeroomTeacher.TeacherName}}</option>
+        <option ng-repeat="homeroomTeacher in homeroomTeachers" value="{{homeroomTeacher.TeacherId}}" ng-if="homeroomTeacher.IsHomeroomTeacher">{{homeroomTeacher.TeacherName}}</option>
     </select>
-    <div>
+    <div ng-show="homeroomTeacher.TeacherId">
         <h2>Welcome to {{homeroomTeacher.TeacherName}}'s Class!</h2>
+        <h4>Please click your name to let your teacher know you are here.</h4>
         <div>
-            <button type="button" class="btn btn-primary" ng-repeat="student in students">{{student.StudentName}}</button>
+            <button type="button" class="btn btn-primary" ng-repeat="student in students">{{student.FirstName}} {{student.LastName}}</button>
         </div>
     </div>
 
