--- a/BackendCapstone/app/partials/studentView.html
+++ b/BackendCapstone/app/partials/studentView.html
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div ng-show="showMain">
     <div ng-if="!homeroomTeacher.TeacherId">
         <h2>Choose your Homeroom Teacher:</h2>
         <select ng-change="selectTeacher()" ng-model="homeroomTeacher.TeacherId">
@@ -23,12 +23,18 @@
             </tr>
             <tr ng-repeat="student in students | filter: {IsAtSchool:true}">
                 <td>{{student.FirstName}} {{student.LastName}}</td>
-                <td><button type="button" class="btn btn-info">Return To Room</button></td>
-                <td><button type="button" class="btn btn-danger" ng-click="exitRoom()">Exit Room</button></td>
+                <td><button type="button" class="btn btn-info" ng-disabled="student.InHomeroom">Return To Room</button></td>
+                <td><button type="button" class="btn btn-danger" ng-click="exitRoom(student.StudentId)" ng-disabled="!student.InHomeroom">Exit Room</button></td>
                 <td></td>
             </tr>
         </table>
     </div>
-
+</div>
+<div ng-show="showChooseLocation">
+    <h2>Please select where you are going.</h2>
+    <select ng-change="selectLocation()" ng-model="location.LocationId">
+        <option ng-repeat="location in locations" value="{{location.LocationId}}">{{location.LocationName}}</option>
+    </select>
+    <button type="button" class="btn btn-info" ng-click="chooseLocation(location.LocationId)">Submit</button>
 
 </div>
