--- a/BackendCapstone/app/partials/studentView.html
+++ b/BackendCapstone/app/partials/studentView.html
@@ -23,7 +23,7 @@
             </tr>
             <tr ng-repeat="student in students | filter: {IsAtSchool:true}">
                 <td>{{student.FirstName}} {{student.LastName}}</td>
-                <td><button type="button" class="btn btn-info" ng-disabled="student.InHomeroom">Return To Room</button></td>
+                <td><button type="button" class="btn btn-info" ng-disabled="student.InHomeroom" ng-click="returnToRoom(student.LocationId, student.StudentId)">Return To Room</button></td>
                 <td><button type="button" class="btn btn-danger" ng-disabled="!student.InHomeroom" ng-click="exitRoom(student.StudentId)">Exit Room</button></td>
                 <td ng-show="!student.InHomeroom"></td>
             </tr>
