reporting page done, also added db sql script

--- a/BackendCapstone/Views/Shared/_Layout.cshtml
+++ b/BackendCapstone/Views/Shared/_Layout.cshtml
@@ -38,6 +38,14 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angular")
+
+    <script src="~/app/lib/node_modules/chart.js/dist/Chart.min.js"></script>
+    <script src="~/app/lib/node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
+
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
+
+
+
