--- a/BackendCapstone/app/partials/Reports.html
+++ b/BackendCapstone/app/partials/Reports.html
@@ -1,29 +1,18 @@
 ﻿<div>
-
     <div>
-        <h2>Number of Students Presently in Homeroom</h2>
-        <table style="width:100%">
-            <tr>
-                <th>Homeroom Teacher</th>
-                <th>Number of Students</th>
-            </tr>
-            <tr ng-repeat="report in reports | filter: {InHomeroom: true}">
-                <td>{{report.LocationName}}</td>
-                <td><!--<a ng-click="viewDetails(report)">-->{{report.NumberOfStudentsInRoom}}</td>
-            </tr>
-        </table>
+        <h2>Percentage of Students Currently In and Out of Their Homeroom</h2>
+        <canvas id="pie" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options"></canvas>
     </div>
-
     <div>
-        <h2>Number of Students Checked Into a Location Other Than Their Homeroom</h2>
-        <table style="width:100%">
+        <h2>Number of Students Presently in Each Location</h2>
+        <table style="width:80%">
             <tr>
                 <th>Location</th>
-                <th>Number of Students Checked In To Location</th>
+                <th>Number of Students</th>
             </tr>
-            <tr ng-repeat="report in reports | filter: {InHomeroom: false}">
+            <tr ng-repeat="report in reports">
                 <td>{{report.LocationName}}</td>
-                <td><!--<a ng-click="viewDetails(report)">-->{{report.NumberOfStudentsInRoom}}</td>
+                <td>{{report.NumberOfStudentsInRoom}}</td>
             </tr>
         </table>
     </div>
