--- a/BackendCapstone/app/partials/studentView.html
+++ b/BackendCapstone/app/partials/studentView.html
@@ -1,40 +1,40 @@
-﻿<div ng-show="showMain">
+﻿<div class="container text-center" ng-show="showMain">
     <div ng-if="!homeroomTeacher.TeacherId">
-        <h2>Choose your Homeroom Teacher:</h2>
-        <select ng-change="selectTeacher()" ng-model="homeroomTeacher.TeacherId">
+        <h2 class="instructions">Choose your Homeroom Teacher:</h2>
+        <select class="select" ng-change="selectTeacher()" ng-model="homeroomTeacher.TeacherId">
             <option ng-repeat="homeroomTeacher in homeroomTeachers" value="{{homeroomTeacher.TeacherId}}" ng-if="homeroomTeacher.IsHomeroomTeacher">{{homeroomTeacher.TeacherName}}</option>
         </select>
     </div>
     <div ng-show="homeroomTeacher.TeacherId">
-        <h2>Welcome to {{homeroomTeacher.TeacherName}}'s Class!</h2>
-        <h4>Please click your name to let your teacher know you are here.</h4>
+        <h2 class="text-center">Welcome to {{homeroomTeacher.TeacherName}}'s Class!</h2>
+        <h4 class="text-center instructions">Please click your name to let your teacher know you are here.</h4>
         <div>
-            <button type="button" class="btn btn-primary" ng-repeat="student in students | filter: {IsAtSchool:false}" ng-click="markStudentPresent(student.StudentId)">{{student.FirstName}} {{student.LastName}}</button>
+            <button type="button" class="btn btn-primary studentNames" ng-repeat="student in students | filter: {IsAtSchool:false}" ng-click="markStudentPresent(student.StudentId)">{{student.FirstName}} {{student.LastName}}</button>
         </div>
     </div>
     <div>
-        <h2>Present:</h2>
+        <h2 class="text-justify underline tableHeading">Students Present:</h2>
         <table style="width:100%">
             <tr>
-                <th>Student</th>
+                <th class="underline">Student</th>
                 <th></th>
                 <th></th>
-                <th>Checked Out To:</th>
+                <th class="underline">Checked Out To:</th>
             </tr>
-            <tr ng-repeat="student in students | filter: {IsAtSchool:true}">
-                <td>{{student.FirstName}} {{student.LastName}}</td>
-                <td><button type="button" class="btn btn-info" ng-disabled="student.InHomeroom" ng-click="returnToRoom(student.LocationId, student.StudentId)">Return To Room</button></td>
+            <tr class="text-justify" ng-repeat="student in students | filter: {IsAtSchool:true}">
+                <td class="tableInfo">{{student.FirstName}} {{student.LastName}}</td>
+                <td><button type="button" class="btn submit" ng-disabled="student.InHomeroom" ng-click="returnToRoom(student.LocationId, student.StudentId)">Return To Room</button></td>
                 <td><button type="button" class="btn btn-danger" ng-disabled="!student.InHomeroom" ng-click="exitRoom(student.StudentId)">Exit Room</button></td>
-                <td ng-show="!student.InHomeroom">{{student.LocationName}}</td>
+                <td class="tableInfo" ng-show="!student.InHomeroom">{{student.LocationName}}</td>
             </tr>
         </table>
     </div>
 </div>
 <div ng-show="showChooseLocation">
-    <h2>{{student.FirstName}} {{student.LastName}}, Please select where you are going.</h2>
-    <select ng-change="selectLocation()" ng-model="location.LocationId">
+    <h2 class="instructions">{{student.FirstName}} {{student.LastName}}, Please select where you are going.</h2>
+    <select class="select" ng-change="selectLocation()" ng-model="location.LocationId">
         <option ng-repeat="location in locations" value="{{location.LocationId}}">{{location.LocationName}}</option>
     </select>
-    <button type="button" class="btn btn-info" ng-click="chooseLocation(location.LocationId, student.StudentId)">Submit</button>
+    <button type="button" class="btn submit" ng-click="chooseLocation(location.LocationId, student.StudentId)">Submit</button>
 
 </div>
