happy with styling

--- a/BackendCapstone/app/partials/editLocation.html
+++ b/BackendCapstone/app/partials/editLocation.html
@@ -1,13 +1,13 @@
 ﻿<div>
-    <form>
+    <form class="forms">
         <div class="form-group">
-            <label for="locationName">Location Name</label>
+            <label class="labels" for="locationName">Location Name</label>
             <input type="text" class="form-control" id="locationName" ng-model="updatedLocation.LocationName" placeholder="Location Name">
         </div>
         <div class="form-group">
-            <label for="timeAtLocation">Time At Location</label>
+            <label class="labels"for="timeAtLocation">Time At Location</label>
             <input type="number" class="form-control" id="timeAtLocation" ng-model="updatedLocation.TimeAtLocation" placeholder="Alloted Time for Location">
         </div>
-        <button type="submit" class="btn btn-default" ng-click="Submit(updatedLocation)">Submit</button>
+        <button type="submit" class="btn submit" ng-click="Submit(updatedLocation)">Submit</button>
     </form>
 </div>
