--- a/BackendCapstone/Content/Site.css
+++ b/BackendCapstone/Content/Site.css
@@ -1,5 +1,4 @@
 ﻿body {
-    background-image: url("Content/images/chalkboard.gif");
     padding-top: 50px;
     padding-bottom: 20px;
 
@@ -94,6 +93,33 @@ textarea {
     margin: 2%;
 }
 
+.forms {
+    padding: 50px;
+    justify-content: center;
+    margin: auto;
+    font-size: 20px;
+}
 
-/*font-family: 'Gaegu', cursive;
-font-family: 'Schoolbell', cursive;*/
+.labels {
+    padding: 5px;
+}
+
+.reportPage {
+    margin: 20px;
+    padding: 10px;
+}
+
+.reportInfo {
+    font-size: 15px;
+    padding: 4px;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #04cddb;
+    color: white;
+    text-align: center;
+}
