--- a/BackendCapstone/Views/Shared/_Layout.cshtml
+++ b/BackendCapstone/Views/Shared/_Layout.cshtml
@@ -31,9 +31,12 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Account4Me</p>
-        </footer>
+        <div class="footer">
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Account4Me</p>
+            </footer>
+        </div>
+        
     </div>
 
     @Scripts.Render("~/bundles/jquery")
