--- a/BackendCapstone/app/partials/Reports.html
+++ b/BackendCapstone/app/partials/Reports.html
@@ -1,19 +1,18 @@
-﻿<div>
-    <div>
-        <h2>Percentage of Students Currently In and Out of Their Homeroom</h2>
-        <canvas id="pie" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options"></canvas>
-    </div>
-    <div>
-        <h2>Number of Students Presently in Each Location</h2>
-        <table style="width:80%">
-            <tr>
-                <th>Location</th>
-                <th>Number of Students</th>
-            </tr>
-            <tr ng-repeat="report in reports">
-                <td>{{report.LocationName}}</td>
-                <td>{{report.NumberOfStudentsInRoom}}</td>
-            </tr>
-        </table>
-    </div>
+﻿
+<div class="report col-lg-6">
+    <h3>Number of Students Presently in Each Location</h3>
+    <table style="width:80%">
+        <tr>
+            <th class="labels">Location</th>
+            <th class="labels">Number of Students</th>
+        </tr>
+        <tr ng-repeat="report in reports">
+            <td class="reportInfo">{{report.LocationName}}</td>
+            <td class="reportInfo">{{report.NumberOfStudentsInRoom}}</td>
+        </tr>
+    </table>
+</div>
+<div class="pieChart col-lg-6">
+    <h3>Students Currently In and Out of Homeroom</h3>
+    <canvas id="pie" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options"></canvas>
 </div>
