--- a/BackendCapstone/Views/Shared/_Layout.cshtml
+++ b/BackendCapstone/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link href="https://fonts.googleapis.com/css?family=Gaegu|Schoolbell" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Nobile" rel="stylesheet">
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -45,6 +46,7 @@
 
     <script src="~/app/lib/node_modules/chart.js/dist/Chart.min.js"></script>
     <script src="~/app/lib/node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
+
 
     @RenderSection("scripts", required: false)
 
