--- a/BackendCapstone/app/partials/editLocation.html
+++ b/BackendCapstone/app/partials/editLocation.html
@@ -1,4 +1,4 @@
-﻿<div>
+﻿<div class="niceFont">
     <form class="forms">
         <div class="form-group">
             <label class="labels" for="locationName">Location Name</label>
