--- a/BackendCapstone/app/partials/index.html
+++ b/BackendCapstone/app/partials/index.html
@@ -1,10 +1,9 @@
 ﻿
 <div class="chooseRole container">
-    <h2 class="pageHeader text-center">
-        {{message}}
-    </h2>
-    <div class="roles .col-md-6 text-center">
-        <button class="roleChoice" ng-click="showTeacherView()">ADMINISTRATOR</button>
+    <h1 class="pageHeader text-center">WELCOME!</h1>
+    <h3 class="text-center niceFont">Choose Your Role</h3>
+    <div class="roles niceFont .col-md-6 text-center">
+        <button class="roleChoice" ng-click="showTeacherView()">ADMIN</button>
         <button class="roleChoice" ng-click="showStudentView()">STUDENT</button>
     </div>
 </div>
