--- a/BackendCapstone/app/partials/teachersList.html
+++ b/BackendCapstone/app/partials/teachersList.html
@@ -1,8 +1,8 @@
-﻿<h2>
+﻿<h2 class="niceFont">
     Manage Teachers
 </h2>
 
-<div>
+<div class="niceFont">
     <table class="table table-striped">
         <thead>
             <tr>
